# schemaf

./: .cookiecutterrc-ci  .flake8  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  README.md  cookiecutter.json  mypy.ini  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: cookie.yml  cookiecutter.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.rst  mypy.ini  pyproject.toml  setup.py  tox.ini
{{cookiecutter.package}}/.github/workflows/: docs.yml  lint.yml  publish.yml  release.yml  test_publish.yml  tests.yml
{{cookiecutter.package}}/docs/source/: conf.py  index.rst
{{cookiecutter.package}}/tests/: test_smoke.py
{{cookiecutter.package}}/{{cookiecutter.package}}/: __about__.py  __init__.py
{{cookiecutter.repo_name}}/: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  README.md  README.rst  codecov.yml  mypy.ini  pyproject.toml  setup.py  tox.ini
{{cookiecutter.repo_name}}/.ci/: after_success.sh  install.sh
{{cookiecutter.repo_name}}/.github/workflows/: build_docs.yml  code_format.yml  docs.yml  lint.yml  static_typing.yml  tests.yml
{{cookiecutter.repo_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.repo_name}}/tests/: conftest.py  test_smoke.py
{{cookiecutter.repo_name}}/third_party_stubs/: README.md
{{cookiecutter.repo_name}}/{{cookiecutter.pkg_name}}/: __about__.py  __init__.py  _git.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __about__.py  __init__.py
{{cookiecutter.slug}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  mypy.ini  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.slug}}/.github/workflows/: docs.yml  lint.yml  publish.yml  publishable.yml  tests.yml
{{cookiecutter.slug}}/docs/: requirements-rtd.txt
{{cookiecutter.slug}}/docs/source/: conf.py  index.rst  installation.rst
{{cookiecutter.slug}}/tests/: mocks.py  test_smoke.py
{{cookiecutter.slug}}/tests/integration/: test_package.py
