[build-system]
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See link below for available options
# https://github.com/pypa/setuptools_scm/#configuration-parameters

write_to = "{{cookiecutter.package}}/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-timestamp"

[tool.isort]
# See link below for available options
# https://github.com/timothycrosley/isort/wiki/isort-Settings#full-reference-of-isort-settings

skip = [
  ".git",
  ".github",
  ".venv",
  ".eggs",
  ".mypy_cache",
  ".pytest_cache",
  ".tox",
  "__pycache__",
  "docs/build",
]
line_length = 88
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true

known_third_party = ["pytest", "setuptools_scm", "toml"]
known_first_party = ["{{cookiecutter.package}}"]

[tool.black]
# See link below for available options
# https://github.com/psf/black#configuration-format

line-length = 88
target-version = [{% for minor in range(cookiecutter.min_python_version[-1]|int, cookiecutter.max_python_version[-1]|int + 1) %}'py3{{minor}}'{{', ' if not loop.last }}{% endfor %}]
exclude = '''
/(
    \.git
  | \.github
  | \.venv
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | __pycache__
  | docs/build
)/
'''
