[build-system]
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See link below for available options
# https://github.com/pypa/setuptools_scm/#configuration-parameters

write_to = "{{cookiecutter.package}}/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-timestamp"

[tool.isort]
# See link below for available options
# https://timothycrosley.github.io/isort/docs/configuration/options/

profile = "black"
line_length = 88

skip_gitignore = true
float_to_top = true
color_output = true
order_by_type = true
combine_star = true
filter_files = true

extra_standard_library = ["importlib_metadata"]
known_third_party = ["pytest"]
known_first_party = ["{{cookiecutter.package}}"]

[tool.black]
# See link below for available options
# https://github.com/psf/black#configuration-format

line-length = 88
target-version = [{% for minor in range(cookiecutter.min_python_version[-1]|int, cookiecutter.max_python_version[-1]|int + 1) %}'py3{{minor}}'{{', ' if not loop.last }}{% endfor %}]
