[metadata]
name = {{cookiecutter.package}}
platforms = any
description = {{cookiecutter.description}}
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = {{cookiecutter.keywords}}
url = {{cookiecutter.url}}
author = {{cookiecutter.author}}
author-email = {{cookiecutter.author_email}}
license = BSD-3-Clause
classifiers =
    Development Status :: {{cookiecutter.dev_status}}
    License :: OSI Approved :: BSD License
    {%- for minor in range(cookiecutter.min_python_version[-1]|int, cookiecutter.max_python_version[-1]|int + 1) %}
    Programming Language :: Python :: 3.{{minor}}
    {%- endfor %}
    Typing :: Typed
project_urls =
    Source = {{cookiecutter.url}}
    Tracker = {{cookiecutter.url}}/issues

[options]
packages = find:
include_package_data = True
python_requires = >={{cookiecutter.min_python_version}}

[options.packages.find]
exclude =
    tests
    tests.*
